--- a/style.css
+++ b/style.css
@@ -325,10 +325,6 @@ h8{
 	margin-bottom: 80px;
 	margin-top: 40px;
 }
-.double-feature {
-	margin-bottom: auto;
-	margin-top: auto;
-}
 .single-feature h5 {
 	font-size: 16px;
 }
@@ -657,4 +653,8 @@ h3 {
 .footer-copy p {
 	font-size: 10px;
 }
+}
+.img-fluid {
+	max-width: 100%;
+	height: auto;
 }
