--- a/style.css
+++ b/style.css
@@ -19,6 +19,46 @@ a:hover {
 	margin-left: auto;
 	margin-right: auto;
 }
+
+#popup {
+	display: block;
+    position: absolute;
+    z-index: 1;
+    height: 540px;
+    border: 1px solid #ffffff;
+    width: 640px;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	margin: auto;
+	background-image: url(/images/popup.jpg);
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
+	@media(max-width: 640px) {
+		position: absolute;
+		width:100%;
+	}
+}
+
+#popup1{
+	display: none;
+}
+
+#overlay1{
+	display: none;
+}
+
+#popupclose {
+	float: right;
+	font-weight: bold;
+	font-size: 25px;
+	padding: 5px;
+	cursor: pointer;
+	color: #ffffff;
+}
+
 h1, h2, h3 {
 	font-size: xx-large;
 	font-weight: 700;
