--- a/style.css
+++ b/style.css
@@ -24,9 +24,11 @@ a:hover {
 	display: block;
     position: absolute;
     z-index: 1;
-    height: 540px;
+    height: 34vw;
+	min-height: 320px;
     border: 1px solid #ffffff;
-    width: 640px;
+    width: 42vw;
+	min-width: 380px;
 	top: 0;
 	left: 0;
 	right: 0;
@@ -36,10 +38,6 @@ a:hover {
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: cover;
-	@media(max-width: 640px) {
-		position: absolute;
-		width:100%;
-	}
 }
 
 #popup1{
@@ -53,7 +51,6 @@ a:hover {
 #popupclose {
 	float: right;
 	font-weight: bold;
-	font-size: 25px;
 	padding: 5px;
 	cursor: pointer;
 	color: #ffffff;
